--- a/FinPlan.Web/Components/Pages/RetirementSpendingPlanner.razor
+++ b/FinPlan.Web/Components/Pages/RetirementSpendingPlanner.razor
@@ -1,4 +1,4 @@
-@page "/retirement-spending"
+@page "/retirement-fire"
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Forms
