--- a/FinPlan.Web/Components/Layout/NavMenu.razor
+++ b/FinPlan.Web/Components/Layout/NavMenu.razor
@@ -44,13 +44,13 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="wealth-journey">
+            <NavLink class="nav-link" href="wealth-journey" title="Calculate how your savings will grow">
                 <span class="bi bi-calculator" aria-hidden="true"></span> Wealth Journey
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="retirement-spending" title="Financial Independence, Retire Early">
+            <NavLink class="nav-link" href="retirement-fire" title="Financial Independence, Retire Early">
                 <span class="bi bi-wallet2" aria-hidden="true"></span> FIRE Planner
             </NavLink>
         </div>
