--- a/FinPlan.Web/Components/RetirementExportButton.razor
+++ b/FinPlan.Web/Components/RetirementExportButton.razor
@@ -1,7 +1,8 @@
 @inject IExcelExportService ExcelService
 @inject IJSRuntime JSRuntime
+@using FinPlan.Shared.Models
 @using FinPlan.Web.Services
-@using static FinPlan.Web.Components.Pages.RetirementSpendingPlanner
+@using static FinPlan.Web.Components.Pages.RetirementPlanner
 
 <button @onclick="ExportToExcel" class="@CssClass">
     <i class="bi bi-file-excel"></i> @Text
