--- a/FinPlan.Web/Components/Pages/WealthJourmeyPlanner.razor
+++ b/FinPlan.Web/Components/Pages/WealthJourmeyPlanner.razor
@@ -401,7 +401,7 @@
                     </div>
                     <div class="card-body">
                         <div class="row mb-3">
-                            <div class="col-6">
+                            <div class="col-md-3">
                                 <div class="card bg-light">
                                     <div class="card-body text-center">
                                         <h4 class="text-primary">@results.FinalAmount.ToString("C")</h4>
@@ -409,7 +409,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-3">
                                 <div class="card bg-light">
                                     <div class="card-body text-center">
                                         <h4 class="text-success">@results.TotalInterestEarned.ToString("C")</h4>
@@ -417,10 +417,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-
-                        <div class="row mb-3">
-                            <div class="col-6">
+                            <div class="col-md-3">
                                 <div class="card bg-light">
                                     <div class="card-body text-center">
                                         <h4 class="text-info">@results.TotalContributions.ToString("C")</h4>
@@ -428,7 +425,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-3">
                                 <div class="card bg-light">
                                     <div class="card-body text-center">
                                         <h4 class="text-warning">@calculatorModel.AnnualGrowthRate.ToString("F1")%</h4>
@@ -464,11 +461,17 @@
                                     <br><br>
                                     <div>
                                         <strong>Account Breakdown:</strong><br>
-                                        <ul class="mb-0">
-                                            <li>Traditional (401k/IRA): <strong>@results.TaxDeferredBalance.ToString("C")</strong></li>
-                                            <li>Roth accounts: <strong>@results.RothBalance.ToString("C")</strong></li>
-                                            <li>Post Tax accounts: <strong>@results.TaxableBalance.ToString("C")</strong></li>
-                                        </ul>
+                                        <div class="row mb-0">
+                                            <div class="col-md-4">
+                                                <span>Traditional (401k/IRA): <strong>@results.TaxDeferredBalance.ToString("C")</strong></span>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <span>Roth accounts: <strong>@results.RothBalance.ToString("C")</strong></span>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <span>Post Tax accounts: <strong>@results.TaxableBalance.ToString("C")</strong></span>
+                                            </div>
+                                        </div>
 
                                         <div class="mt-3 mb-0">
                                             <strong>Income Type Breakdown:</strong>
