--- a/FinPlan.Web/Components/Pages/WealthJourmeyPlanner.razor
+++ b/FinPlan.Web/Components/Pages/WealthJourmeyPlanner.razor
@@ -1114,7 +1114,7 @@
             calculatorModel.LastUpdateDate = DateTime.UtcNow; // Set last update time
 
             // Create SaveRequest object
-            var saveRequest = new SaveRequest()
+            var saveRequest = new SaveSavingsRequest()
             {
                 UserGuid = userGuid,
                 CalculatorType = calculatorType,
