--- a/FinPlan.Web/Components/ExportButton.razor
+++ b/FinPlan.Web/Components/ExportButton.razor
@@ -2,9 +2,9 @@
 @inject IJSRuntime JSRuntime
 @using FinPlan.Shared
 @using FinPlan.Shared.Models
+@using FinPlan.Shared.Models.Savings
 @using FinPlan.Web.Models
 @using FinPlan.Web.Services
-
 @using FinPlan.Web.Services
 
 <button @onclick="ExportToExcel" class="@CssClass">
