--- a/FinPlan.Web/Components/Pages/Archive/RetirementSpendingPlanner.razor
+++ b/FinPlan.Web/Components/Pages/Archive/RetirementSpendingPlanner.razor
@@ -1,17 +1,18 @@
 @page "/retirement-single"
 @using System.ComponentModel.DataAnnotations
-@using FinPlan.Shared.Models
-@using FinPlan.Shared.Services
-@using Microsoft.AspNetCore.Components
-@using Microsoft.AspNetCore.Components.Forms
-@using Microsoft.AspNetCore.Components.Web
-@using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.AspNetCore.Components.Routing
-@using static Microsoft.AspNetCore.Components.Web.RenderMode
-@using Microsoft.JSInterop
 @using System.IO
 @using ClosedXML.Excel
+@using FinPlan.Shared.Models
+@using FinPlan.Shared.Models.Spending
+@using FinPlan.Shared.Services
 @using FinPlan.Web.Services
+@using Microsoft.AspNetCore.Components
+@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.JSInterop
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @rendermode InteractiveServer
 
 <PageTitle>Retirement Spending Planner</PageTitle> 
