--- a/FinPlan.Web/Components/Pages/RetirementPlanner.razor
+++ b/FinPlan.Web/Components/Pages/RetirementPlanner.razor
@@ -1,6 +1,8 @@
 ﻿@page "/retirement-fire"
 @using System.ComponentModel.DataAnnotations
 @using FinPlan.Shared.Models
+@using FinPlan.Shared.Models.Savings
+@using FinPlan.Shared.Models.Spending
 @using FinPlan.Shared.Services
 @using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Forms
