--- a/FinPlan.Web/Components/RetirementExportButton.razor
+++ b/FinPlan.Web/Components/RetirementExportButton.razor
@@ -1,6 +1,7 @@
 @inject IExcelExportService ExcelService
 @inject IJSRuntime JSRuntime
 @using FinPlan.Shared.Models
+@using FinPlan.Shared.Models.Spending
 @using FinPlan.Web.Services
 @using static FinPlan.Web.Components.Pages.RetirementPlanner
 
