--- a/FinPlan.Web/Components/Pages/WealthJourmeyPlanner.razor
+++ b/FinPlan.Web/Components/Pages/WealthJourmeyPlanner.razor
@@ -3,6 +3,7 @@
 @using FinPlan.Shared
 @using FinPlan.Shared.Enums
 @using FinPlan.Shared.Models
+@using FinPlan.Shared.Models.Savings
 @using FinPlan.Shared.Services
 @using FinPlan.Web
 @using FinPlan.Web.Components
